# Taffk

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  DESIGN.md  LICENSE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.svelte  App.tsx  app.css  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: sign-windows.ps1
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  notes.rs  query.rs  search.rs  watcher.rs
src/components/: CalendarView.tsx  ConfirmDialog.tsx  KanbanBoard.tsx  KeyboardHelp.tsx  MarkdownNotes.tsx  PomodoroWidget.tsx  ProjectDialog.tsx  PromptDialog.tsx  QuickAdd.tsx  SearchSpotlight.tsx  SettingsSidebar.tsx  Sidebar.tsx  StickyNoteWindow.tsx  TaskContextMenu.tsx  TaskDetail.tsx  TaskItem.tsx  TaskListView.tsx  TaskSpotlight.tsx  TimeView.tsx
src/components/dialog/: ConfirmDialog.tsx  PromptDialog.tsx
src/components/projects/: ProjectDialog.tsx
src/components/search/: SearchSpotlight.tsx
src/components/settings/: AppearanceSettings.tsx  ArchivesSettings.tsx  (+8 more)
src/lib/: Editor.svelte  NotePane.svelte  Palette.svelte  Sidebar.svelte  api.ts  confirm.ts  dates.ts  keyboard.ts  markdown.ts  mockBackend.ts  pomodoro.ts  prompt.ts  settings.ts  sidebar.ts  store.ts  theme.ts  timeStats.ts  updater.ts  utils.ts
tasks/: learn.md  list.md
website/: README.md  app.js  cgv.html  confidentialite.html  index.html  mentions-legales.html  styles.css  vercel.json
(+19 files in other folders)
